# esp-hosted

./: .gitignore
common/: esp_hosted_config.pb-c.c
common/include/: adapter.h  esp_hosted_config.pb-c.h
common/proto/: esp_hosted_config.proto
docs/: c_api.md  c_demo.md  python_api.md  python_demo.md
docs/Linux_based_host/: porting_guide.md
esp/esp_driver/network_adapter/main/: sdio_slave_api.c  slave_commands.c
host/esp32/components/drivers/: CMakeLists.txt  Kconfig.projbuild  component.mk
host/esp32/components/host_control/: control.c
host/esp32/main/: CLI_Commands.c  CMakeLists.txt  dongle_main.c
host/esp32/main/driver/include/: sdspi_drv.h
host/esp32/main/driver/sdspi_driver/: sdspi_drv.c
host/esp32/main/host_control/include/: control.h  test_api.h  test_config.h
host/esp32/main/host_driver/sdspi_driver/: sdspi_drv.c
host/esp32/main/other/: data_back.c  uart.c
host/host_common/: commands.c
host/host_common/include/: commands.h
host/linux/host_control/c_support/: Makefile  heartbeat.c  test.c
host/linux/host_control/python_support/: commands_lib.py  commands_map_py_to_c.py  heartbeat.py
